# Posit-PyTorch

./: NLayerNet.py  README.md  finderror.py  mnist_posit.py  plot_distrib.py  posadd_test.py  posit_mac.py  posit_test.py  posmul_test.py  result.txt
distrib/: CMakeLists.txt  genlookup2.cpp  op.cpp
extras_ignore/: conv_test.py  mnist_floattest.py  mnist_floattest_2.py  mnist_floattest_3.py  mnist_posit.py  mnist_test.py
extras_ignore/conv2d/: CMakeLists.txt  genlookup2.cpp  genlookupmul.cpp  op.cpp
extras_ignore/pos_mul/: CMakeLists.txt  genlookupmul.cpp  linear_pos.cpp  op.cpp
lookup/PositAdder_V/Accurate/: compare60.txt  compare61.txt  compare62.txt  compare71.txt  compare72.txt  compare73.txt  compare84.txt  result60.txt  result61.txt  result62.txt  result70.txt  result71.txt  result72.txt  result73.txt  result80.txt  result81.txt  result82.txt  result83.txt  result84.txt
lookup/PositAdder_V/Accurate/7_0/: compare70.txt
lookup/PositAdder_V/Accurate/7_2/: testcases72.txt
lookup/PositAdder_V/Accurate/8_0/: compare80.txt
lookup/PositAdder_V/Accurate/8_1/: compare81.txt
lookup/PositAdder_V/Accurate/8_2/: compare82.txt
lookup/PositAdder_V/Accurate/8_3/: compare83.txt
lookup/PositMultiplier_V/Accurate/: compare70.txt  compare71.txt  compare80.txt  compare81.txt  compare82.txt  compare84.txt  result73.txt  result82.txt  result83.txt  result84.txt
lookup/PositMultiplier_V/Accurate/6_0/: compare60.txt
lookup/PositMultiplier_V/Accurate/6_1/: compare61.txt  testcases61.txt
lookup/PositMultiplier_V/Accurate/6_2/: compare62.txt
lookup/PositMultiplier_V/Accurate/7_2/: compare72.txt
lookup/PositMultiplier_V/Accurate/7_3/: compare73.txt
lookup/PositMultiplier_V/Accurate/8_0/: result80.txt
lookup/PositMultiplier_V/Accurate/8_3/: compare83.txt
lookup/PositMultiplier_V/Approximate_1/: compare62.txt  compare70.txt  compare72.txt  compare80.txt  compare81.txt  compare82.txt  compare83.txt  result60.txt  result61.txt  result62.txt  result70.txt  result71.txt  result72.txt  result81.txt
lookup/PositMultiplier_V/Approximate_1/6_1/: compare61.txt
lookup/PositMultiplier_V/Approximate_1/7_1/: compare71.txt
lookup/PositMultiplier_V/Approximate_1/7_3/: compare73.txt
lookup/PositMultiplier_V/Approximate_1/8_0/: compare80.txt
lookup/PositMultiplier_V/Approximate_1/8_1/: compare81.txt  testcases81.txt
lookup/PositMultiplier_V/Approximate_1/8_2/: compare82.txt  testcases82.txt
lookup/PositMultiplier_V/Approximate_1/8_3/: compare83.txt
lookup/PositMultiplier_V/Approximate_1/8_4/: compare84.txt
lookup/PositMultiplier_V/Approximate_2/6_0/: compare60.txt
lookup/PositMultiplier_V/Approximate_2/8_4/: compare84.txt
mat_mul/: .op.cpp.swp  CMakeLists.txt  genlookup2.cpp  genlookupmul.cpp  op.cpp
posit_add/: CMakeLists.txt  genlookup2.cpp  op.cpp
